--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,19 @@ body {
 }
 img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  height: 230px;
   object-fit: cover;
-  width: 300px;
 }
 input,
 button {
+  width: 200px;
+  padding: 10px;
   border-radius: 5px;
+  border-color: burlywood;
+}
+input:focus {
+  outline: none;
   border-color: burlywood;
 }
 .search-form {
@@ -19,5 +25,44 @@ button {
   padding: 20px;
   margin-bottom: 20px;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+.photo-card {
+  display: flex;
+  flex-direction: column;
+  width: 310px;
+  height: 100%;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.info {
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.info-item {
+  margin: 0;
+  display: flex;
+  gap: 5px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .load-more {
+  display: block;
+  margin: 20px auto;
+  width: 200px;
+  padding: 10px;
+  text-align: center;
+}
+.is-hidden {
+  display: none;
 }
