--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,7 @@ input:focus {
   flex-wrap: wrap;
   flex-direction: row;
   gap: 20px;
+  padding: 12px;
   align-items: center;
   justify-content: center;
 }
